package edu.fiuba.algo3.modelo;

public class LadronAtrapado implements RespuestasDelEvento {
    String arresto = "Policia atrapó al ladron";

    public String obtenerRespuesta() {
        return arresto;
    }
}
