package edu.fiuba.algo3.modelo;

public class LadronEscapo implements RespuestasDelEvento {
    String huida = "Ladrón escapó";

    public String obtenerRespuesta() {
        return huida;
    }
}
